actualizacion de estados dinamicos de los sintomas agregados, ahora dependen del estado del componente y se renderizan segun agregues o elimines los mismos, tambien se devuelven a la lista al ser eliminados

--- a/front/public/styles.css
+++ b/front/public/styles.css
@@ -19,6 +19,7 @@
     border-width: 2px; border-top-width: 0.5px;}
 .modalScreen{background-color: blueviolet; position: absolute; height: auto; width: auto; top: 10%;}
 .symtomsContainer{display: flex; height: 8vh;}
+.invisible{opacity: 0%;}
 /*reciclarn't*/
 
 /* Fragmentos de registro*/
