--- a/front/public/styles.css
+++ b/front/public/styles.css
@@ -10,13 +10,14 @@
 .horizontalFlex{display: flex;flex-direction:row;flex-wrap: wrap;}
 .azul-Oscuro{background-color: rgb(53, 127, 212);}
 .smallMargin{margin-top: 1em; margin-bottom: 1em; padding: 2px; }
+.fullW{width: 100%; background-color: red;}
 
 
 /*reciclarn't*/
 .STATUSBAR{background-color: rgb(53, 127, 212);display: flex;padding: 10px;margin: 0%;
     border-color:rgb(43, 44, 129); border-style: solid; border-width: 2px; border-bottom-width: 1.4px;}
 .SIDEBAR{background-color: rgb(154, 77, 226); border-color:rgb(104, 52, 153); border-style: solid; 
-    border-width: 2px; border-top-width: 0.5px;}
+    border-width: 2px; border-top-width: 0.5px; height: 100%;}
 .modalScreen{background-color: blueviolet; position: absolute; height: auto; width: auto; top: 10%;}
 .symtomsContainer{display: flex; height: 8vh;}
 .invisible{opacity: 0%;}
