--- a/front/public/styles.css
+++ b/front/public/styles.css
@@ -8,7 +8,8 @@
 
 .fitContent{word-break: break-all;font-size: large; flex-wrap: wrap;}
 
-
+.separator{border-color:rgb(59, 53, 64); border-style: solid; border-width: 10px; border-left: 0; border-right: 0; border-top: 0;}
+.tittle{font-size: large;}
 
 
 .azul-Oscuro{background-color: rgb(53, 127, 212);}
