--- a/front/public/styles.css
+++ b/front/public/styles.css
@@ -11,7 +11,7 @@
 .separator{border-color:rgb(59, 53, 64); border-style: solid; border-width: 10px; border-left: 0; border-right: 0; border-top: 0;}
 .tittle{font-size: large;}
 
-.modalDil{overflow-y: scroll; overflow-x: hidden; width: 100%; height:50%}
+.modalDiv{overflow-y: scroll; overflow-x: hidden; height:500px}
 
 
 .azul-Oscuro{background-color: rgb(53, 127, 212);}
