--- a/front/public/styles.css
+++ b/front/public/styles.css
@@ -1,26 +1,22 @@
 .centrate{text-align: center; justify-content: center; align-items: center; display: felx;}
 .basicBorders{padding:10px;margin: 10px;}
 .topped{top: 0%; justify-content: start;}
-
 .verticalFlex{display: flex;flex-direction: column;}
 .horizontalFlex{display: flex;flex-direction:row;flex-wrap: wrap;}
-
 .flexible{display: flex;}
-
 .fitContent{word-break: break-all;font-size: large; flex-wrap: wrap;}
-
 .separator{border-color:rgb(59, 53, 64); border-style: solid; border-width: 10px; border-left: 0; border-right: 0; border-top: 0;}
 .tittle{font-size: large;}
+.h500{height: 500px;}
 
-.modalDiv{overflow-y: scroll; overflow-x: hidden; height:500px}
-.modalCentratedSmall{height: 40%; padding: 5%;
-    margin-left:10%; margin-right: 10%; margin-top: 10%;
-    background-color: white;}
-.modalStaticValues{
-    height: 60%; padding: 5%;
-    margin-left:10%; margin-right: 10%; margin-top: 10%;
-    background-color: white;
-}
+
+.modalDiv{overflow-y: scroll; overflow-x: hidden;}
+
+.modalCentratedSmall{height: 40%; padding: 5%; margin-left:10%; margin-right: 10%; margin-top: 10%; background-color: white;}
+.modalStaticValues{ height: 60%; padding: 5%; margin-left:10%; margin-right: 10%; margin-top: 10%; background-color: white;}
+.modalColor{ background-color: white; }
+
+.updateModal{height: 500px; margin-top: 6%;}
 
 .azul-Oscuro{background-color: rgb(53, 127, 212);}
 .smallMargin{margin-top: 1em; margin-bottom: 1em; padding: 2px; }
