--- a/front/public/styles.css
+++ b/front/public/styles.css
@@ -1,4 +1,5 @@
-.centrate{text-align: center; justify-content: center; align-items: center; display: felx;}
+.centrate{text-align: center; justify-content: center; align-items: center; display: flex;}
+.right{text-align:right; justify-content: center; align-items: right; display: flex;}
 .basicBorders{padding:10px;margin: 10px;}
 .topped{top: 0%; justify-content: start;}
 .verticalFlex{display: flex;flex-direction: column;}
