--- a/front/public/styles.css
+++ b/front/public/styles.css
@@ -1,5 +1,5 @@
-.centrate{text-align: center; justify-content: center; align-items: center; display: flex;}
-.right{text-align:right; justify-content: center; align-items: right; display: flex;}
+.centrate{text-align: center; justify-content: center; align-items: center; }
+.right{ align-items:right; justify-content: right; }
 .basicBorders{padding:10px;margin: 10px;}
 .topped{top: 0%; justify-content: start;}
 .verticalFlex{display: flex;flex-direction: column;}
